deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-agent-webhook
  namespace: sandbox
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /hooks/
            pathType: Prefix
            backend:
              service:
                name: ops-agent-controller
                port:
                  number: 8579
